docs/versions/4.22/groups/M21.md
---
layout: group
group_id: M21
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Disables unnecessary kernel modules to reduce the attack surface. Blacklists network protocols (SCTP, TIPC, ATM, CAN), wireless drivers (bluetooth, WiFi), obsolete filesystems (cramfs, hfs, jffs2), and removable storage (USB, FireWire).

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `atm-disabled` | Disable ATM network protocol |
| `bluetooth-disabled` | Disable Bluetooth |
| `can-disabled` | Disable CAN bus protocol |
| `cfg80211-disabled` | Disable wireless configuration |
| `cramfs-disabled` | Disable cramfs filesystem |
| `firewire-core-disabled` | Disable FireWire |
| `freevxfs-disabled` | Disable FreeVxFS filesystem |
| `hfs-disabled` | Disable HFS filesystem |
| `hfsplus-disabled` | Disable HFS+ filesystem |
| `iwlmvm-disabled` | Disable Intel WiFi MVM driver |
| `iwlwifi-disabled` | Disable Intel WiFi driver |
| `jffs2-disabled` | Disable JFFS2 filesystem |
| `mac80211-disabled` | Disable wireless MAC layer |
| `sctp-disabled` | Disable SCTP protocol |
| `squashfs-disabled` | Disable SquashFS filesystem |
| `tipc-disabled` | Disable TIPC protocol |
| `udf-disabled` | Disable UDF filesystem |
| `usb-storage-disabled` | Disable USB mass storage |

## Verification

```bash
oc debug node/<node> -- chroot /host lsmod | grep -E 'bluetooth|usb.storage|sctp'
```
